# Ayaka

./: Makefile  README.md  build.rs
.cargo/: config.toml
assets/sample/: sample.md
assets/templates/: article.md
ayaka-app/: .prettierrc.json  components.d.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts  windi.config.ts
ayaka-app/src/: App.vue  main.ts
ayaka-app/src/components/: ArticlePage.vue  Home.vue  HomePage.vue  Markdown.vue  Reader.vue  Toc.vue
ayaka-app/src/components/Markdown/: Markdown.vue  Toc.vue  TocBox.vue  TocTree.ts  index.ts
ayaka-app/src/components/Markdown/extensions/: ayaka-core.less  ayaka-core.ts  index.d.ts  katex.less  katex.ts
ayaka-app/src/pages/: Article.vue  Home.vue
ayaka-app/src/router/: index.ts
ayaka-cli/: Cargo.toml
ayaka-cli/assets/sample/: sample.md
ayaka-cli/assets/templates/: article.md  config.toml  configs.toml
ayaka-cli/src/: argparse.rs  main.rs
ayaka-cli/src/commands/: gen.rs  generate.rs  init.rs  mod.rs  new.rs
ayaka-cli/src/utils/: mod.rs
frontend/: .prettierignore  package.json  pnpm-lock.yaml
frontend/src/: main.ts
frontend/src/components/Markdown/: Markdown.vue  Toc.vue  TocTree.ts
frontend/src/components/Markdown/extensions/: ayaka-core.less  ayaka-core.ts
frontend/src/pages/: Article.vue  Home.vue
src/: argparse.rs  main.rs
src/commands/: generate.rs  initialize.rs  preview.rs
src/utils/: mod.rs
