[package]
name = "ayaka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = [ "derive" ] }
colored = "2.0"
include_dir = "0.7"
log = "0.4"
log4rs = "1.2"
once_cell = "1.16"
regex = "1.7"
serde_json = "1.0"
toml = "0.5"
uuid = { version = "1.2", features = [ "v4", "fast-rng" ] }
